# multiplayer-couple-flying-chess

./: .gitignore  CLAUDE.md  README.md  default_tasks.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  需求文档.md
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default_tasks.json
app/src/main/java/com/couplechess/: CoupleChessApp.kt  MainActivity.kt
app/src/main/java/com/couplechess/data/: DefaultTasks.kt  GameSaveManager.kt  GameStateHolder.kt
app/src/main/java/com/couplechess/data/bridge/: GameBridge.kt  GameEngine.kt
app/src/main/java/com/couplechess/data/db/: AppDatabase.kt  Converters.kt  TaskDao.kt  TaskEntity.kt
app/src/main/java/com/couplechess/data/model/: GameModels.kt
app/src/main/java/com/couplechess/data/repository/: TaskRepository.kt
app/src/main/java/com/couplechess/ui/components/: PlayerSetupComponents.kt
app/src/main/java/com/couplechess/ui/navigation/: Screen.kt
app/src/main/java/com/couplechess/ui/screens/game/: GameScreen.kt  GameViewModel.kt
app/src/main/java/com/couplechess/ui/screens/home/: HomeScreen.kt
app/src/main/java/com/couplechess/ui/screens/playersetup/: PlayerSetupScreen.kt  PlayerSetupViewModel.kt
app/src/main/java/com/couplechess/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: styles.xml
gamelogic/: Cargo.toml
gamelogic/src/: game.rs  lib.rs  models.rs
gradle/: libs.versions.toml
(+2 files in other folders)
